--- a/styles/app.css
+++ b/styles/app.css
@@ -1,6 +1,6 @@
 html {
   position: absolute;
-  height:800px;
+  height:700px;
 }
 body {
   min-height:100%;
@@ -13,6 +13,9 @@ body {
   height: 60px;
   background-color: #f5f5f5;
   text-align: center;
+}
+.footer > .container > p {
+  display: inline;
 }
 .container > .content{
 	height: calc(100% - 200px);
