--- a/styles/app.css
+++ b/styles/app.css
@@ -85,3 +85,9 @@ header[role="banner"] > h2 {
   padding-right: 20px;
   padding-left: 20px;
 }
+.navbar-default .navbar-nav .applyPolygon > a {
+  display:none;
+  background-color: green;
+  color:white;
+  text-decoration: none;
+}
